# hunt-match-telemetry

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: publish-build.yaml  run-tests.yaml
src/: main.py
src/hunt/: attributes_parser.py  constants.py  exceptions.py  formats.py  reward_constants.py
src/hunt/attributes/: accolade.py  entry.py  match.py  parser.py  player.py  rewards.py  team.py
src/hunt/attributes/xml/: elements.py  serializable.py
src/hunt/cli/: app.py  config.py  exit_codes.py
src/hunt/cli/arguments/: parser.py
src/hunt/database/: client.py  queries.py
src/hunt/filesystem/: watchdog.py
src/hunt/steam/: api.py  type_aliases.py
src/hunt/types/: match.py  player.py  team.py
src/hunt/utilities/: database.py  database_queries.py  file_watcher.py  hunt.py  steam.py
tests/: conftest.py  test_formats.py
tests/attributes/: conftest.py  test_match.py  test_parser.py  test_player.py  test_rewards.py
tests/attributes/xml/: conftest.py  test_elements.py
tests/database/: conftest.py  test_client.py  test_queries.py
